--- a/index.html
+++ b/index.html
@@ -5,44 +5,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Happy Birthday!!! :)</title>
+  <title>Dành cho Linh Giang xinh gái</title>
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
   <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
+  <img src="./img/clover.png" id="clover0" alt="">
+  <img src="./img/clover.png" id="clover1" alt="">
+  <img src="./img/clover.png" id="clover2" alt="">
   <div class="container">
     <div class="one">
       <h1 class="one">
-        <span data-node-name="greeting">Hey</span>
-        <span data-node-name="name">Lydia</span>
+        <span data-node-name="greeting">Chao xìn</span>
+        <span data-node-name="name">Võ Linh Giang</span>
       </h1>
-      <p class="two" data-node-name="greetingText">I really like your name btw!</p>
+      <p class="two" data-node-name="greetingText">Nhân tiện thì anh cũng thích tên của em lắm :))</p>
     </div>
     <div class="three">
-      <p data-node-name="text1">It's your birthday!!! :D</p>
+      <p data-node-name="text1">Cúng cuồi cũng đến ngày sinh nhật rùi!!! :D</p>
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox" data-node-name="textInChatBox">Happy birthday to you!! Yeee! Many many happy blah...</p>
-        <p class="fake-btn" data-node-name="sendButtonLabel">Send</p>
+        <p class="hbd-chatbox" data-node-name="textInChatBox">Chúc mừng sinh nhật bla ble...</p>
+        <p class="fake-btn" data-node-name="sendButtonLabel">Gửi</p>
       </div>
     </div>
     <div class="five">
-      <p class="idea-1" data-node-name="text2">That's what I was going to do.</p>
-      <p class="idea-2" data-node-name="text3">But then I stopped.</p>
+      <p class="idea-1" data-node-name="text2">Ban đầu anh định nhắn với gọi rứa thôi :(</p>
+      <p class="idea-2" data-node-name="text3">Sau anh nghị lại</p>
       <p class="idea-3">
-        <span data-node-name="text4">I realised, I wanted to do something</span>
-        <strong data-node-name="text4Adjective">special</strong>.</p>
-      <p class="idea-4" data-node-name="text5Entry">Because,</p>
+        <span data-node-name="text4">Anh muốn mần chi đó...</span>
+        <strong data-node-name="text4Adjective">thú vị hơn</strong>.</p>
+      <p class="idea-4" data-node-name="text5Entry">Bởi vì,</p>
       <p class="idea-5">
-        <span data-node-name="text5Content">You are Special</span>
+        <span data-node-name="text5Content">Hôm nay là ngày đặc biệt mà</span>
         <span class="smiley" data-node-name="smiley">:)</span>
       </p>
       <p class="idea-6">
-        <span data-node-name="bigTextPart1">S</span>
-        <span data-node-name="bigTextPart2">O</span>
+        <span data-node-name="bigTextPart1">N</span>
+        <span data-node-name="bigTextPart2">Ê</span>
+        <span data-node-name="bigTextPart3">N</span>
       </p>
     </div>
     <div class="six">
@@ -50,7 +54,7 @@
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
-        <h5 data-node-name="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h5 data-node-name="wishText">Tuổi 19 hạnh phúc nha ;)</h5>
       </div>
     </div>
     <div class="seven">
@@ -120,8 +124,8 @@
       </svg>
     </div>
     <div class="nine">
-      <p data-node-name="outroText">Okay, now come back and tell me if you liked it.</p>
-      <p id="replay" data-node-name="replayText">Or click, if you want to watch it again.</p>
+      <p data-node-name="outroText">Hi vọng là em thích, yêu em nhiều <3</p>
+      <p id="replay" data-node-name="replayText">click đây nếu em muốn xem lại nha</p>
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
     </div>
   </div>
