--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
       </svg>
     </div>
     <div class="nine">
+      <p data-node-name="outroText">Nếu em thắc mắc là tại răng sinh nhật 19 mà để ảnh hồi C2</p>
+      <p data-node-name="outroText">thì anh cụng không biết trả lời răng mô :))</p>
+      <p data-node-name="outroText">anh thấy đẹp thì để rứa thôi :))</p>
       <p data-node-name="outroText">Hi vọng là em thích, yêu em nhiều <3</p>
       <p id="replay" data-node-name="replayText">click đây nếu em muốn xem lại nha</p>
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
