add sound and small change to code

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <img src="./img/clover.png" id="clover0" alt="">
   <img src="./img/clover.png" id="clover1" alt="">
   <img src="./img/clover.png" id="clover2" alt="">
+  <audio controls hidden autoplay loop preload="auto">	
+    <source src="/sound/ALittleLovePiano-VA_47c8p_hq.mp3" type="audio/mpeg">
+  </audio>
   <div class="container">
     <div class="one">
       <h1 class="one">
@@ -54,7 +57,7 @@
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
-        <h5 data-node-name="wishText">Tuổi 19 hạnh phúc nha ;)</h5>
+        <h5 data-node-name="wishText">Chúc bé yêu của anh tuổi 19 hạnh phúc nha ;)</h5>
       </div>
     </div>
     <div class="seven">
@@ -128,7 +131,7 @@
       <p data-node-name="outroText">thì anh cụng không biết trả lời răng mô :))</p>
       <p data-node-name="outroText">anh thấy đẹp thì để rứa thôi :))</p>
       <p data-node-name="outroText">Hi vọng là em thích, yêu em nhiều <3</p>
-      <p id="replay" data-node-name="replayText">click đây nếu em muốn xem lại nha</p>
+      <!-- <p id="replay" data-node-name="replayText">click đây nếu em muốn xem lại nha</p> -->
       <p class="last-smile" data-node-name="outroSmiley">:)</p>
     </div>
   </div>
