--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <img src="./img/clover.png" id="clover1" alt="">
   <img src="./img/clover.png" id="clover2" alt="">
   <audio controls hidden autoplay loop preload="auto">	
-    <source src="./sound/ALittleLovePiano-VA_47c8p_hq.mp3" type="audio/mpeg">
+    <source src="https://github.com/frydaiii/happy-birthday/raw/master/sound/ALittleLovePiano-VA_47c8p_hq.mp3" type="audio/mpeg">
   </audio>
   <div class="container">
     <div class="one">
