--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
   <link rel="stylesheet" href="style/style.css">
 </head>
 
+<audio id="audio">	
+  <source src="https://raw.githubusercontent.com/frydaiii/happy-birthday/master/sound/ALittleLovePiano-VA_47c8p_hq.mp3" type="audio/mpeg">
+  No audio
+</audio>
+<button id="start" onclick="begin()">Ấn để bắt đầu nè</button>
 <body>
   <img src="./img/clover.png" id="clover0" alt="">
   <img src="./img/clover.png" id="clover1" alt="">
   <img src="./img/clover.png" id="clover2" alt="">
-  <audio controls hidden autoplay loop preload="auto">	
-    <source src="https://github.com/frydaiii/happy-birthday/raw/master/sound/ALittleLovePiano-VA_47c8p_hq.mp3" type="audio/mpeg">
-  </audio>
   <div class="container">
     <div class="one">
       <h1 class="one">
